# data-mining

./: .gitignore
final/: .gitignore  main.py  pyproject.toml  submission.csv
hw1/: abalation.log.result  abalation.ps1  ablation.sh  ablation_val2.log.result  main.py  pyproject.toml  requirements.txt  run.sh  test.log.result  train_model.py
hw1/archieve/: model.json  prediction_temporal_rmse_NA.csv  prediction_temporal_rmse_NA_w9.csv
hw1/doc/: README.md  report.md
hw1/history_models/: model_default.npz  model_default_val_3.npz  model_default_val_4.npz  model_epochs_10000.npz  model_epochs_10000_val_0_pat_1000_standardized_noval.npz  model_epochs_10000_val_1.npz  model_epochs_10000_val_1_pat_1000_standardized.npz  model_epochs_10000_val_2_pat_1000_standardized.npz  model_epochs_10000_val_3.npz  model_epochs_10000_val_3_pat_1000_standardized.npz  model_epochs_10000_val_4.npz  model_epochs_10000_val_4_pat_1000_standardized.npz  model_epochs_15000_val_2_pat_100.npz  model_epochs_20000_val_0_pat_1000_standardized_noval.npz  (+7 more)
hw2/: README.md  all_items  anomaly_ae.pth  anomaly_ae_1.pth  compare.py  find_items.py  labels.csv  labels.xlsx  main.py  match_labels.py  pyproject.toml  submission.csv  submission_analysis.csv  submission_compare_overfit_train.csv  submission_h.csv  submission_overfit.csv  submission_overfit_analysis.csv  submission_train.csv  submission_train_analysis.csv  train.py  train_anomaly.py  true_label.csv
hw3/: README.md  badtry.py  download.sh  main.py  pyproject.toml  requirements.txt  run.sh  test.py  test_torch.py  test_torch_large.py
(+310 files in other folders)
